--- a/react-ui/src/pages/ListItem/ListItem.module.css
+++ b/react-ui/src/pages/ListItem/ListItem.module.css
@@ -16,3 +16,7 @@
 .exampleTitle {
   font-weight: 400;
 }
+
+.dividerMargin {
+  margin: 2rem 0;
+}
